// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: show bar 1`] = `
"Graph {
  Seq []
  Next [
    *  Graph {
       Seq [
         1. compute {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   current: foo | 1 | 11
                 }
              }},
              3. filter {{}}
            ]
            Next [
              *  Graph {
                 Seq []
                [(empty list)]},
              *  Graph {
                 Seq [
                   1. compute {{}},
                   2. filter {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             current: 12
                           }
                        }},
                        3. filter {{}}
                      ]
                      Next [
                        *  Graph {
                           Seq []
                          [(empty list)]}
                     ]}
                ]}
           ]}
      ]},
    *  Graph {
       Seq [
         1. compute {{}},
         2. run {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. compute {{}},
              2. run {{}}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             current: false
                           }
                        }},
                        3. filter {{}}
                      ]
                      Next [
                        *  Graph {
                           Seq []
                          [(empty list)]}
                     ]}
                ]}
           ]}
      ]}
  ]}"
`;

exports[`graphite: show bar 2`] = `
"Graph {
  Seq []
  Next [
    *  Graph {
       Seq [
         1. compute {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   current: foo | 1 | 11
                 }
              }},
              3. filter {{}}
            ]
            Next [
              *  Graph {
                 Seq []
                [(empty list)]},
              *  Graph {
                 Seq [
                   1. compute {{}},
                   2. filter {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             current: 12
                           }
                        }},
                        3. filter {{}}
                      ]
                      Next [
                        *  Graph {
                           Seq []
                          [(empty list)]}
                     ]}
                ]}
           ]}
      ]}
  ]}"
`;

exports[`graphite: show foo 1`] = `
"Graph {
  Seq []
  Next [
    *  Graph {
       Seq [
         1. compute {{}}
       ]
       Next [
         *  Graph {
            Seq []
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             current: foo | 1 | 11 | 101
                           }
                        }},
                        3. filter {{}}
                      ]
                      Next [
                        *  Graph {
                           Seq []
                          [(empty list)]},
                        *  Graph {
                           Seq [
                             1. compute {{}},
                             2. filter {{}}
                           ]
                           Next [
                             *  Graph {
                                Seq [
                                  1. filter {{}},
                                  2. update {{
                                     store: {
                                       current: 18
                                     }
                                  }},
                                  3. filter {{}}
                                ]
                                Next [
                                  *  Graph {
                                     Seq []
                                    [(empty list)]}
                               ]}
                          ]}
                     ]}
                ]}
           ]}
      ]}
  ]}"
`;

exports[`graphite: show store1 1`] = `
"Graph {
  Seq [
    1. filter {{}},
    2. update {{
       store: {
         current: foo | 1 | 11 | 101
       }
    }},
    3. filter {{}}
  ]
  Next [
    *  Graph {
       Seq []
      [(empty list)]},
    *  Graph {
       Seq [
         1. compute {{}},
         2. filter {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   current: 18
                 }
              }},
              3. filter {{}}
            ]
            Next [
              *  Graph {
                 Seq []
                [(empty list)]}
           ]}
      ]}
  ]}"
`;

exports[`graphite: show store2 1`] = `
"Graph {
  Seq [
    1. filter {{}},
    2. update {{
       store: {
         current: 18
       }
    }},
    3. filter {{}}
  ]
  Next [
    *  Graph {
       Seq []
      [(empty list)]}
  ]}"
`;

exports[`showcase: event foo 1`] = `
"Graph {
  Seq []
  Next [
    *  Graph {
       Seq [
         1. compute {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   current: 3
                 }
              }},
              3. filter {{}}
            ]
            Next [
              *  Graph {
                 Seq []
                [(empty list)]},
              *  Graph {
                 Seq [
                   1. filter {{}},
                   2. tap {{}},
                   3. tap {{}},
                   4. barrier {{
                      barrierID: 1,
                      priority: barrier
                   }},
                   5. compute {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             current: {
                               a: 3,
                               b: 6
                             }
                           }
                        }},
                        3. filter {{}}
                      ]
                      Next [
                        *  Graph {
                           Seq []
                          [(empty list)]},
                        *  Graph {
                           Seq [
                             1. compute {{}},
                             2. filter {{}}
                           ]
                           Next [
                             *  Graph {
                                Seq [
                                  1. filter {{}},
                                  2. update {{
                                     store: {
                                       current: 3
                                     }
                                  }},
                                  3. filter {{}}
                                ]
                                Next [
                                  *  Graph {
                                     Seq []
                                    [(empty list)]},
                                  *  Graph {
                                     Seq [
                                       1. compute {{}},
                                       2. run {{}}
                                     ]
                                     Next [
                                       *  Graph {
                                          Seq [
                                            1. compute {{}},
                                            2. run {{}}
                                          ]
                                          Next [
                                            *  Graph {
                                               Seq [
                                                 1. compute {{}}
                                               ]
                                               Next [
                                                 *  Graph {
                                                    Seq [
                                                      1. filter {{}},
                                                      2. update {{
                                                         store: {
                                                           current: false
                                                         }
                                                      }},
                                                      3. filter {{}}
                                                    ]
                                                    Next [
                                                      *  Graph {
                                                         Seq []
                                                        [(empty list)]}
                                                   ]}
                                              ]}
                                         ]}
                                    ]}
                               ]}
                          ]}
                     ]}
                ]}
           ]}
      ]}
  ]}"
`;

exports[`showcase: mapped 1`] = `
"Graph {
  Seq [
    1. filter {{}},
    2. update {{
       store: {
         current: 3
       }
    }},
    3. filter {{}}
  ]
  Next [
    *  Graph {
       Seq []
      [(empty list)]},
    *  Graph {
       Seq [
         1. compute {{}},
         2. run {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. compute {{}},
              2. run {{}}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             current: false
                           }
                        }},
                        3. filter {{}}
                      ]
                      Next [
                        *  Graph {
                           Seq []
                          [(empty list)]}
                     ]}
                ]}
           ]}
      ]}
  ]}"
`;

exports[`showcase: store a 1`] = `
"Graph {
  Seq [
    1. filter {{}},
    2. update {{
       store: {
         current: 3
       }
    }},
    3. filter {{}}
  ]
  Next [
    *  Graph {
       Seq []
      [(empty list)]},
    *  Graph {
       Seq [
         1. filter {{}},
         2. tap {{}},
         3. tap {{}},
         4. barrier {{
            barrierID: 1,
            priority: barrier
         }},
         5. compute {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   current: {
                     a: 3,
                     b: 6
                   }
                 }
              }},
              3. filter {{}}
            ]
            Next [
              *  Graph {
                 Seq []
                [(empty list)]},
              *  Graph {
                 Seq [
                   1. compute {{}},
                   2. filter {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             current: 3
                           }
                        }},
                        3. filter {{}}
                      ]
                      Next [
                        *  Graph {
                           Seq []
                          [(empty list)]},
                        *  Graph {
                           Seq [
                             1. compute {{}},
                             2. run {{}}
                           ]
                           Next [
                             *  Graph {
                                Seq [
                                  1. compute {{}},
                                  2. run {{}}
                                ]
                                Next [
                                  *  Graph {
                                     Seq [
                                       1. compute {{}}
                                     ]
                                     Next [
                                       *  Graph {
                                          Seq [
                                            1. filter {{}},
                                            2. update {{
                                               store: {
                                                 current: false
                                               }
                                            }},
                                            3. filter {{}}
                                          ]
                                          Next [
                                            *  Graph {
                                               Seq []
                                              [(empty list)]}
                                         ]}
                                    ]}
                               ]}
                          ]}
                     ]}
                ]}
           ]}
      ]}
  ]}"
`;
